# linfa-linalg

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: checking.yml  codequality.yml  testing.yml
src/: bidiagonal.rs  cholesky.rs  cholesky_update.rs  eigh.rs  givens.rs  householder.rs  index.rs  lib.rs  norm.rs  qr.rs  reflection.rs  svd.rs  triangular.rs  tridiagonal.rs
src/lobpcg/: algorithm.rs  eig.rs  lobpcg.rs  mod.rs  svd.rs
tests/: bidiagonal.rs  cholesky.rs  cholesky_update.rs  common.rs  eigh.rs  lobpcg.rs  qr.rs  svd.rs  triangular.rs  tridiagonal.rs
