[package]
name = "ndarray-linalg-rs"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"

keywords = ["ndarray", "matrix"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.15", default-features = false, features = ["approx"] }
num-traits = "0.2.0"
thiserror = "1"

[dev-dependencies]
approx = "0.4"
ndarray-rand = "0.14"
rand_isaac = "0.3"
rand = "0.8"
