[package]
name = "ndarray-linalg-rs"
version = "0.1.0"
edition = "2018"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

keywords = ["ndarray", "matrix"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.15", features = ["approx"] }
num-traits = "0.2.0"
thiserror = "1"
rand = { version = "0.8", optional=true }

[dev-dependencies]
approx = "0.4"
proptest = "1.0"
proptest-derive = "0.2.0"
ndarray-rand = "0.14"
rand_xoshiro = { version = "0.6" }

[features]
default = ["iterative"]
iterative = ["rand"]
