[package]
name = "linfa-linalg"
version = "0.1.0"
edition = "2018"
authors = ["Yuhan Lin <yuhanliin@protonmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Pure-Rust implementation of linear algebra routines for ndarray"
repository = "https://github.com/rust-ml/linfa-linalg"
rust-version = "1.65"

keywords = ["ndarray", "matrix", "linalg"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.16", features = ["approx"] }
num-traits = "0.2.0"
thiserror = "1"
rand = { version = "0.8", optional=true }

[dev-dependencies]
approx = "0.5"
proptest = "1.0"
proptest-derive = "0.5.0"
ndarray-rand = "0.15"
rand_xoshiro = { version = "0.6" }

[features]
default = ["iterative"]
iterative = ["rand"]
